# campaign

./: .env.example  .gitignore  CLAUDE.md  INSTRUCTIONS.md  Makefile  PROJECT_STATUS.md  README.md  TECH_DEBT.md  campaign  install.sh  main.py  pyproject.toml  requirements.txt  session_notes.txt  test_campaign.py
config/: README.md  default.yaml  development.yaml  production.yaml  test.yaml
reference/: base_reqs.md
scripts/: check_system.sh  dev.sh  doctor.sh  fix_macos.sh  setup.sh
src/config/: settings.py
src/ingestion/: document_processor.py
src/llm/: base.py  multi_model_service.py  ollama_service.py  service_factory.py
src/retrieval/: retriever.py
src/storage/: vector_store.py
src/synthesis/: content_synthesizer.py
test_data/: README.md  sample.md
test_data/campaign/: bestiary.md  locations.md  npcs.md  session_notes.md
