[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "campaign-assistant"
version = "0.1.0"
description = "AI-powered D&D campaign management assistant"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Campaign Assistant Team"},
]
keywords = ["dnd", "campaign", "ai", "assistant", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb>=0.4.18,<0.5.0",
    "langchain>=0.1.4,<0.2.0",
    "pypdf2>=3.0.1,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "markdown>=3.5.2,<4.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "requests>=2.31.0,<3.0.0",
    "sentence-transformers>=2.2.2,<3.0.0",
    "openai>=1.6.0,<2.0.0",
    "anthropic>=0.8.0,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "black>=23.12.1,<24.0.0",
    "isort>=5.13.0,<6.0.0",
    "mypy>=1.8.0,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
]

[project.scripts]
campaign = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/campaign-assistant"
Repository = "https://github.com/yourusername/campaign-assistant"
Issues = "https://github.com/yourusername/campaign-assistant/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true